infra/k8s/tc-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tc-system
  labels:
    managed-by: tysoncloud
