infra/k8s/tc-system/registry-config.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: registry-config
  namespace: tc-system
  labels:
    app: registry-config
spec:
  selector:
    matchLabels:
      app: registry-config
  template:
    metadata:
      labels:
        app: registry-config
    spec:
      hostPID: true
      containers:
        - name: configure
          image: busybox:1.36@sha256:73aaf090f3d85aa34ee199857f03fa3a95c8ede2ffd4cc2cdb5b94e566b11662
          command:
            - /bin/sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: host-etc
              mountPath: /host/etc
            - name: config
              mountPath: /config
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          securityContext:
            privileged: true
      volumes:
        - name: host-etc
          hostPath:
            path: /etc
            type: Directory
        - name: config
          configMap:
            name: registry-hosts-toml
      terminationGracePeriodSeconds: 5
