infra/k8s/tc-system/status-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud-status
  labels:
    app: tysoncloud-status
  namespace: tc-system
spec:
  selector:
    matchLabels:
      app: tysoncloud
  template:
    metadata:
      labels:
        app: tysoncloud
    spec:
      serviceAccountName: tysoncloud-status
      containers:
        - name: tysoncloud-status
          image: timmijinks/tysoncloud-status@sha256:e9be266a8993d7cd01721f107a4deb80a27c4d9b4e75e3e2c9ea3a864e3818fb
          ports:
            - containerPort: 8080
