infra/k8s/tc-system/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tysoncloud-gateway
  namespace: tc-system
  annotations:
    cert-manager.io/issuer: tysoncloud-issuer
spec:
  gatewayClassName: nginx
  listeners:
    - name: http-wildcard-base
      port: 80
      protocol: HTTP
      hostname: "*.tysonjenkins.dev"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              managed-by: tysoncloud
    - name: https-wildcard-base
      port: 443
      hostname: "*.tysonjenkins.dev"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              managed-by: tysoncloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-tls-secret
            kind: Secret
    - name: http-wildcard-dev
      port: 80
      protocol: HTTP
      hostname: "*.tysonjenkins.test"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              managed-by: tysoncloud
    - name: https-wildcard-dev
      port: 443
      hostname: "*.tysonjenkins.test"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              managed-by: tysoncloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-tls-secret
            kind: Secret
