infra/k8s/tc-system/tysoncloud-backend-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tysoncloud-backend-dev
  namespace: tc-system
spec:
  parentRefs:
    - name: tysoncloud-gateway
      namespace: tc-system
  hostnames:
    - "app-tc-api.tysonjenkins.dev"
    - "app-tysoncloud-api.tysonjenkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tysoncloud-backend-dev
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tysoncloud-backend-dev
  namespace: tc-system
  labels:
    app: tysoncloud-backend-dev
spec:
  selector:
    app: tysoncloud-backend-dev
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud-backend-dev
  labels:
    app: tysoncloud-backend-dev
  namespace: tc-system
spec:
  selector:
    matchLabels:
      app: tysoncloud-backend-dev
  template:
    metadata:
      labels:
        app: tysoncloud-backend-dev
    spec:
      serviceAccountName: tysoncloud-backend
      containers:
        - name: tysoncloud-backend-dev
          image: timmijinks/tysoncloud-backend-dev
          ports:
            - containerPort: 8080
        - name: buildkitd
          image: moby/buildkit:latest
          args:
            - --addr
            - tcp://0.0.0.0:1234
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          ports:
            - containerPort: 1234
              name: buildkit
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 1234
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 5Gi
