infra/k8s/tc-system/tysoncloud-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tysoncloud-backend
  namespace: tc-system
spec:
  parentRefs:
    - name: tysoncloud-gateway
      namespace: tc-system
  hostnames:
    - "tc-api.tysonjenkins.dev"
    - "tysoncloud-api.tysonjenkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tysoncloud-backend
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tysoncloud-backend
  namespace: tc-system
  labels:
    app: tysoncloud-backend
spec:
  selector:
    app: tysoncloud-backend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud-backend
  labels:
    app: tysoncloud-backend
  namespace: tc-system
spec:
  selector:
    matchLabels:
      app: tysoncloud-backend
  template:
    metadata:
      labels:
        app: tysoncloud-backend
    spec:
      serviceAccountName: tysoncloud-backend
      containers:
        - name: tysoncloud-backend
          image: ghcr.io/timmyjinks/tysoncloud-backend:sha-83af2367e54393ad07b6ed35e63113f363396ed9
          ports:
            - containerPort: 8080
        - name: buildkitd
          image: moby/buildkit:latest
          args:
            - --addr
            - tcp://0.0.0.0:1234
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          ports:
            - containerPort: 1234
              name: buildkit
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 1234
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
