infra/k8s/tc-system/tysoncloud-frontend-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tysoncloud-frontend-dev
  namespace: tc-system
spec:
  parentRefs:
    - name: tysoncloud-gateway
      namespace: tc-system
  hostnames:
    - "app-tc.tysonjenkins.dev"
    - "app-tysoncloud.tysonjenkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tysoncloud-frontend-dev
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tysoncloud-frontend-dev
  namespace: tc-system
  labels:
    app: tysoncloud-frontend-dev
spec:
  selector:
    app: tysoncloud-frontend-dev
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud-frontend-dev
  labels:
    app: tysoncloud-frontend-dev
  namespace: tc-system
spec:
  selector:
    matchLabels:
      app: tysoncloud-frontend-dev
  template:
    metadata:
      labels:
        app: tysoncloud-frontend-dev
    spec:
      containers:
        - name: tysoncloud-frontend-dev
          image: ghcr.io/timmyjinks/tysoncloud-frontend:sha-d6472dda5649340dbf692af3eb9ff7eec563ea38
          ports:
            - containerPort: 3000
